--- a/index.html
+++ b/index.html
@@ -34,22 +34,24 @@
 				<h2>Web & Application Development</h2>
 			</div>
 
-			<div class="app-section-container">
-				<div>
-					<p>
-						Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-						cupidatat non proident, sunt in culpa qui officia deserunt mollit
-						anim id est laborum.
-					</p>
-				</div>
-				<div>
-					<p>
-						Eu tincidunt tortor aliquam nulla facilisi. Turpis in eu mi bibendum
-						neque egestas congue quisque egestas. Venenatis lectus magna
-						fringilla urna porttitor rhoncus. Aliquet lectus proin nibh nisl
-						condimentum
-					</p>
+			<div class="app-padding">
+				<div class="app-section-container">
+					<div>
+						<p>
+							Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui officia deserunt mollit
+							anim id est laborum.
+						</p>
+					</div>
+					<div>
+						<p>
+							Eu tincidunt tortor aliquam nulla facilisi. Turpis in eu mi
+							bibendum neque egestas congue quisque egestas. Venenatis lectus
+							magna fringilla urna porttitor rhoncus. Aliquet lectus proin nibh
+							nisl condimentum
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -136,12 +138,16 @@
 
 					<div>
 						<p>
-							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+							reprehenderit in voluptate velit esse cillum dolore eu
 						</p>
 					</div>
 
 					<div>
-						<a href="mailto:htmltest@metennkoste.com">htmltest@metennkoste.com</a>
+						<a href="mailto:htmltest@metennkoste.com"
+							>htmltest@metennkoste.com</a
+						>
 					</div>
 				</div>
 
@@ -152,7 +158,11 @@
 
 					<div>
 						<p>
-							Gravida arcu ac tortor dignissim convallis aenean et tortor. Sed blandit libero volutpat sed cras ornare arcu. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Duis tristique sollicitudin nibh sit amet commodo. In est ante in nibh mauris. Tempor commodo ullamcorper a lacus vestibulum sed arcu non. 
+							Gravida arcu ac tortor dignissim convallis aenean et tortor. Sed
+							blandit libero volutpat sed cras ornare arcu. Vulputate sapien nec
+							sagittis aliquam malesuada bibendum arcu. Duis tristique
+							sollicitudin nibh sit amet commodo. In est ante in nibh mauris.
+							Tempor commodo ullamcorper a lacus vestibulum sed arcu non.
 						</p>
 					</div>
 				</div>
